--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
 
-    <div id="about-container">
+    <div class="container" id="about-container">
       <div>
         <h2 class="centered-text">About Me</h2>
         <!-- container2 -->
@@ -106,11 +106,8 @@
         <button id="downloadCVButton" onclick="downloadFile()">
           Download My CV
         </button>
-        <button id="githubButton" onclick="followGitLink()">
+        <button id="githubButton" onclick="followLink()">
           Visit my GitHub
-        </button>
-        <button id="ppButton" onclick="followPPLink()">
-           My Power Platform Portefolio
         </button>
       </div>
     </div>
